Fix text alignment

--- a/_sass/cover.scss
+++ b/_sass/cover.scss
@@ -5,6 +5,7 @@
     h1 {
         color: $text-colour-light;
         margin: 0;
+        text-align: center;
     }
     p {
         max-width: 80%;
