--- a/_sass/post.scss
+++ b/_sass/post.scss
@@ -20,6 +20,7 @@
     color: $secondary-highlight;
     font-weight: bold;
     font-size: 0.9rem;
+    text-align: center;
 }
 
 .post-image {
